# tv-remote-selfhosted-free

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.bridge.yml  docker-compose.host.yml  docker-compose.yml  main.py  pyproject.toml  tv_core.py  web.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  api.ts  style.css
frontend/src/components/: ConnectView.vue  PairModal.vue  RemoteView.vue
frontend/src/composables/: useKeyRepeat.ts
static/: index.html
