[project]
name = "androidtv"
version = "0.1.0"
description = "Self-hosted Android TV / Google TV remote — web UI, desktop, and CLI over your LAN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "androidtvremote2>=0.3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "zeroconf>=0.148.0",
]
